Fixed font size rule overlap and removed distracting text on surprise

--- a/src/Components/HeroSection.css
+++ b/src/Components/HeroSection.css
@@ -44,25 +44,6 @@ img {
     padding-top: 100px;   
   }
 
-  .hero-description {
-    color: #fffeee;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-    font-size: 20px;
-    font-weight: normal;
-    text-shadow: 1px 2px 10px rgba(0, 0, 0, 1),
-    -3px -3px 7px rgba(95, 83, 5, 1);
-}
-
-#paragraph {
-  text-align: center;
-  max-width: 50%;
-  font-size: 16px;
-  text-shadow: 1px 2px 10px rgba(0, 0, 0, 1);
-
-}
 
   .hero-text  > p {
     margin-top: 8px;
@@ -73,6 +54,30 @@ img {
 
   .hero-btns .btn {
     margin: 6px;
+  }
+
+    .hero-description {
+    color: #fffeee;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    font-size: 20px;
+    font-weight: normal;
+    text-shadow: 1px 2px 10px rgba(0, 0, 0, 1),
+    -3px -3px 7px rgba(95, 83, 5, 1);
+  }
+
+  #education {
+    font-size: 20px;
+  }
+
+  #paragraph {
+    text-align: center;
+    max-width: 50%;
+    font-size: 16px;
+    text-shadow: 1px 2px 10px rgba(0, 0, 0, 1);
+
   }
 
   @media screen and (max-width: 960px) {
